[package]
name = "space_station"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_derive2 = "0.1.17"
rand = "0.8.5"
strum_macros = "0.24.3"
inquire = "0.3.0"
parse-display = "0.5.5"
strum = "0.24.1"